# ltn-youtube

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ltn_youtube/: __init__.py  cli.py  youtube_source.py
tests/: test_cli.py  test_youtube_source.py
